upload a file not clean, it will be cleaned later
